[package]
name = "rs-cpu-usage2grpc"
version = "0.1.0"
edition = "2024"

[dependencies.psutil]
version = "5.2.0"
default-features = false
features = [
	"cpu",
]

[dependencies.tokio]
version = "1.46.1"
default-features = false
features = [
	"macros",
	"rt-multi-thread",
	"time",
]

[dependencies.prost]
version = "0.13.5"
default-features = false
features = [
	"std",
	"derive",
]


[dependencies.tonic]
version = "0.13.1"
default-features = false
features = [
	"prost",
	"transport",
	"codegen",
	"router",
]

[build-dependencies.tonic-build]
version = "0.13.1"
default-features = false
features = [
	"prost",
	"transport",
]

